# weg-translator-v2

./: .env.example  .gitattributes  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  CLAUDE.md.old  Editor-dev.md  OpenXLIFF-Plan.md  PLAN.md  Plan.md  Plan_ProjectManagerV2_React19_Refactor.md  README.md  React_19_guideline.md  RegistrationFlow.md  S1.md  SQLite-debug.md  Sqlite-docs.md  Test.docx  Test.docx.skl  Test.docx.xlf  combobox-search-fix.md  components.json  eslint.config.js  fix-all-lint-and-typecheck-errors-in-src-modules-auth.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  project-manager-react19-modernization-plan.md  project-manager-v2-migration-matrix.md  sentic_club-db-and-import-pipeline-execution-plan.md  sentic_club-db-and-import-pipeline-execution-plan_report_step10_1.md  sentic_club-db-and-import-pipeline-execution-plan_report_step11_1.md  sentic_club-db-and-import-pipeline-execution-plan_report_step12_1.md  sentic_club-db-and-import-pipeline-execution-plan_report_step12_2_1.md  sentic_club-db-and-import-pipeline-execution-plan_report_step12_2_2.md  sentic_club-db-and-import-pipeline-execution-plan_report_step12_3_1.md  sentic_club-db-and-import-pipeline-execution-plan_report_step13_1.md  (+79 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  sqlite.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_baseline_schema.down.sql  0001_baseline_schema.up.sql  001_create_translation_jobs.sql  002_create_translation_outputs.sql  003_seed_demo_data.sql  004_create_projects.sql  005_create_project_files.sql  006_add_project_languages.sql  007_create_project_file_conversions.sql  008_add_jliff_columns.sql  009_create_reference_tables.sql  010_alter_projects_add_lifecycle_and_refs.sql  011_create_project_language_pairs.sql  012_alter_project_files_extend.sql  013_create_file_targets.sql  014_create_artifacts.sql  015_create_validations.sql  016_create_notes.sql  017_create_jobs.sql  018_alter_jobs_add_job_key.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: builders.rs  config.rs  constants.rs  error.rs  manager.rs  mod.rs  schema.rs  utils.rs
src-tauri/src/db/operations/: artifacts.rs  artifacts_v2.rs  clients.rs  conversions.rs  file_targets.rs  jobs.rs  jobs_v2.rs  language_pairs.rs  mod.rs  notes.rs  project_files.rs  projects.rs  projects_v2.rs  reference.rs  translation_jobs.rs  users.rs  validations.rs
src-tauri/src/db/types/: artifact.rs  conversion.rs  file_target.rs  job.rs  mod.rs  note.rs  (+7 more)
src-tauri/src/ipc/: commands.rs  dto.rs  error.rs  events.rs  mod.rs  state.rs
src-tauri/src/jliff/: converter.rs  mod.rs  model.rs  options.rs  tag_map.rs
src-tauri/src/settings/: mod.rs
src-tauri/tests/: conversion_plan.rs  db_integration.rs  db_manager_v2.rs  ipc_artifacts.rs  ipc_projects_v2.rs  project_conversions.rs  project_creation_rollback.rs  schema_migrations.rs
(+1362 files in other folders)
