[package]
name = "weg-translator"
version = "0.1.0"
description = "Inference-based Multilingual Text Generator"
authors = ["you"]
edition = "2024"
default-run = "weg-translator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weg_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["test"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = { version = "2.7.0", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
time = { version = "0.3.44", features = ["formatting"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "macros", "migrate"] }
libc = "0.2.175"
quick-xml = "0.38.3"
jsonschema = "0.33.0"
language-tags = "0.3.2"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "seed-demo-project"
path = "src/bin/seed_demo_project.rs"
